message.css
ul.column_1 .front, ul.column_1 .back {
	background: #4DB6AC;
}

ul.column_1 .votes {
	background: #009688;
}

ul.column_2 .front, ul.column_2 .back {
	background: #e57373;
}

ul.column_2 .votes {
	background: #e53935;
}

ul.column_3 .front, ul.column_3 .back {
	background: #BA68C8;
}

ul.column_3 .votes {
	background: #AB47BC;
}

.message-list {
	width: 29%;
	display: inline-block;
	vertical-align: top;
}

.text {
  white-space: pre-line; 
  word-break: break-word; 
  padding-right: 15px;
}

.message-body {
	height: 6.3em;
	padding: 0.5em;
}

.message-body a {
	position: absolute;
	right: 0.5em;
  top: 0.4em;
}

.votes {
	display: block;
	font-size: 0.9em;
	text-align: right;
	padding: 0.5em;
	right: 0;
	top: 81px;
	position: absolute;
}

.message {
  perspective: 500;
  -webkit-perspective: 500;
  -moz-perspective: 500;
  -ms-perspective: 500;
  -o-perspective: 500;
  transform-style: preserve-3d;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  -o-transform-style: preserve-3d;
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -ms-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  background: transparent;
  display: block;
	height: 110px;
	width: 27%;
	margin-bottom: 1em;
	border-radius: 2px;
	position: absolute;
	-webkit-transition: top 0.3s ease-in-out;
	-moz-transition: top 0.3s ease-in-out;
	transition: top 0.3s ease-in-out;	
}

.message .front {
  float: none;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 900;
  width: 100%;
  height: 100%;
  -webkit-transform: rotateX(0deg) rotateY(0deg);
  -moz-transform: rotateX(0deg) rotateY(0deg);
  transform: rotateX(0deg) rotateY(0deg);
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
  color: white;
  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

.message .back {
  float: none;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 800;
  width: 100%;
  height: 100%;
  color: white;
  -webkit-transform: rotateY(-180deg);
  -moz-transform: rotateY(-179deg);
  transform: rotateY(-179deg);
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

.message.flip .front {
  z-index: 900;
  -webkit-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.message.flip .back {
  z-index: 1000;
  -webkit-transform: rotateX(0deg) rotateY(0deg);
  -moz-transform: rotateX(0deg) rotateY(0deg);
  transform: rotateX(0deg) rotateY(0deg);
}

.back a {
	color: #d32f2f;
}

